# CreatorVault

./: .cleanupignore  .dockerignore  .env.creator.example  .env.deployment.template  .env.example  .env.production  .gitignore  .gitmodules  .node-options  AA_ACTIVATION.md  AA_STRATEGY_DEPLOYMENT.md  ACTUAL_FIX_SUMMARY.md  AGENT_0_ORCHESTRATOR.md  AGENT_BRIEFING.md  AGENT_HANDOFF.md  AGENT_INSTRUCTIONS.md  AGENT_WORKFLOW.md  AJNA_BUCKET_CALCULATOR.md  AJNA_DEPLOYMENT.md  AKITA_LAUNCH_NOW.md  ALL_ISSUES_RESOLVED.md  ARBITRUM_READY.md  ARBITRUM_TESTING_GUIDE.md  ARBITRUM_TEST_COMPLETE_SUMMARY.md  ARCHITECTURE_OVERVIEW.md  ASSET_CUSTODY_OPTIONS.md  AUTOMATED_COMPLETION_OPTIONS.md  Anchor.toml  CHARM_DEPOSIT_COMPLETE_EXPLANATION.md  CHARM_DEPOSIT_EXPLAINED.md  CHARTS_AND_PRICES_STATUS.md  CLEANUP_SUMMARY.md  CLOUDFLARE_SETUP.md  COMPLETE_DEPLOYMENT_SUMMARY.md  COMPLETE_SUMMARY.md  COMPOSER_AND_ASSET_CUSTODY_EXPLAINED.md  CREATE2_DEPLOYMENT_GUIDE.md  CREATOR_AJNA_GUIDE.md  CRITICAL_BUG_ANALYSIS.md  CRITICAL_BUG_SUMMARY.md  (+187 more)
.vercel/: project.json
agent-logs/: lottery_set_integrator_zero.json  lottery_set_local_vrf.json  lottery_set_target_eid.json  lottery_use_local_vrf.json  v2_5_set_vrf_coordinator.json  vrf_set_config.json
agent4-security/: AGENT_4_HANDOFF.md  AGENT_4_SECURITY_DELIVERABLES.md  AGENT_4_STATUS.md  PRODUCTION_INCIDENT_RESPONSE.md  PRODUCTION_SECURITY_AUDIT.md  PRODUCTION_SECURITY_SETUP.md
api/: [...path].ts
archive/: README.md  creatorVaultsArticle.md
bAlanciaga-master/: .env.example  CHANGELOG.md  PRODUCT_LINEUP.md  README.md  REFACTORING_SUMMARY.md  TRIANGULAR_FRAMEWORK.md  VISION.md  WHATS_NEW.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
contracts/: ATOMIC_WITHDRAWAL_README.md  CROSS_CHAIN_WITHDRAWAL_GUIDE.md  CreatorGaugeController.sol  CreatorOVaultWrapper.sol  CreatorRegistry.sol  CreatorShareOFT.sol  EagleOVault.sol  EagleOVaultV2.sol  EagleOVaultV2Hybrid.sol  EagleOVaultV2Portals.sol  EagleOVaultV3Chainlink.sol  EagleRegistry.sol  EagleVaultWrapper.sol  TestMinimal.sol  deployEagleOFT.ts
create2-miner/: Cargo.toml  README.md
deployments/: README.md  charm-strategy-fixed.json  composer-bytecode-hash.txt  composer-ethereum-1762773645271.json  composer-ethereum-1762776574714.json  composer-verification-data.json  ethereum.json  layerzero_peers_arbitrum_to_Base.json  layerzero_peers_base_to_Arbitrum.json  production-metrics.json  sepolia-deployment.json  sepolia-ecosystem-v2.json  sepolia-ecosystem.json  sepolia-partial.md  wlfi_arbitrum.json
devtools/: deployConfig.ts
docs/: CHARM_INTEGRATION_FLOW.md  CLEANUP_COMPLETE.md  Deploy.md  EAGLEOVAULT_V2_GUIDE.md  FEE_ARCHITECTURE.md  FRONTEND_INTEGRATION_GUIDE.md  HYBRID_FRONTEND_GUIDE.md  PORTALS_INTEGRATION_GUIDE.md  PORTALS_VS_DIRECT_COMPARISON.md  PRODUCTION_ADDRESSES.md  README.md  aa.js  (+15 more)
docs-site/: .gitignore  docusaurus.config.ts  package.json  pnpm-lock.yaml
programs/eagle-oft-layerzero/: Cargo.toml
programs/eagle-oft-layerzero/src/: lib.rs
programs/eagle-oft-raw/: Cargo.toml
programs/eagle-oft-raw/src/: lib.rs
programs/eagle-registry-solana/: Cargo.toml
programs/eagle-registry-solana/src/: lib.rs
programs/eagle-share-oft/: Cargo.toml
programs/eagle-share-oft-minimal/: Cargo.toml
programs/eagle-share-oft-minimal/src/: lib.rs
programs/eagle-share-oft/src/: lib.rs
(+1627 files in other folders)
