[package]
name = "eagle-oft-layerzero"
version = "0.1.0"
description = "EAGLE OFT - LayerZero V2 Native Implementation"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "eagle_oft_layerzero"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = []

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1" }
solana-program = "1.18"

# LayerZero dependencies
# Note: These may need to be updated based on actual LayerZero Solana SDK
# layerzero-solana = { version = "0.1.0", optional = true }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
opt-level = "z"

