[package]
name = "eagle-oft-raw"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "2.1"
spl-token = { version = "6.0", features = ["no-entrypoint"] }
borsh = "1.5"
thiserror = "1.0"

[profile.release]
overflow-checks = true
lto = true
codegen-units = 1
opt-level = "z"
strip = true

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

