[package]
name = "eagle-registry-solana"
version = "0.1.0"
description = "Eagle Registry Solana Adapter for LayerZero V2 Cross-Chain Messaging"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "eagle_registry_solana"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
solana-program = "1.18"

