[package]
name = "eagle-share-oft-minimal"
version = "0.1.0"
description = "Minimal EAGLE Share OFT - Optimized for size and cost"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "eagle_share_oft_minimal"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = []

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1", features = [] }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
opt-level = "z"

