[package]
name = "eagle-share-oft"
version = "0.1.0"
description = "Eagle Share OFT - LayerZero Omnichain Fungible Token for EAGLE vault shares on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "eagle_share_oft"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"

